
2019-06-24  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to check file_features for COB_FILE_SYNC flag and then
	cob_sync the file

2019-06-21  Ron Norman <rjn@inglenet.com>

	* fileio.c: Add cob_write_dict and cob_read_dict for data file description

2019-06-14  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (bdb_err_event): added DB_EVENT_WRITE_FAILED, call cob_stoprun
	  for full tear-down, to no create loops in case of fatal errors unset
	  bdb_env and use new guard bdb_err_tear_down;
	  adjusted to remove compiler warnings

2019-06-13  Ron Norman <rjn@inglenet.com>

	* fileio.c: Use bdb_env->set_event_notify to catch fatal BDB errors
	  and exit the program 

2019-06-11  Ron Norman <rjn@inglenet.com>

	* fileio.c: COB_FILE_PATH may be a colon separated list of directories
	    With BDB the COB_FILE_PATH is now passed to BDB using set_data_dir

2019-06-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Merged BDB record lock retry logic from reportwriter

2019-06-07  Ron Norman <rjn@inglenet.com>

	* fileio.c: If DB_HOME is not defined, then default to "."
	  If DB_HOME is 'no' or 'false' then disable record/file locking

2019-06-06  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fix more merge issues for BDB

2019-06-05  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_close, cob_file_unlock) [!HAVE_FCNTL]: fixed
	  missing check for fcntl availability

2019-04-14  Ron Norman <rjn@inglenet.com>

	* screenio.c: define ALT_DEL, ALT_LEFT, ALT_RIGHT
	  using \033 for Escape instead of \E to avoid C compiler problems
	* fileio.c: Fix RELATIVE file I/O bug for use on big-endian system

2019-03-12  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info): changed msgid for "file handler" and output
	  if RTD-version of VB-ISAM is used, partially after Ron Norman

2015-03-03  Ron Norman

	* fileio.c, common.c, common.h updated to resolve little endian
	  versus big endian issues

2019-02-26  Simon Sobisch <simonsobisch@gnu.org>
